--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,18 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  http: ^0.12.0+4
-  cached_network_image: ^2.1.0+1
+  bloc: ^4.0.0
+  flutter_bloc: ^4.0.0
+  equatable: ^1.1.1
+  http: ^0.12.1
+  url_launcher: ^5.4.5
+  font_awesome_flutter: ^8.8.1
+  shared_preferences: ^0.5.7
+  cached_network_image: ^2.2.0
+  share: ^0.6.4
   webview_flutter: ^0.3.20
+  geolocator: ^5.1.3
+  connectivity: ^0.4.8+6
   flutter:
     sdk: flutter
 
